<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editAge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="123dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="arial"
        android:text="@string/input_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:fontFamily="arial"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageRedCross" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="22dp"
        android:fontFamily="arial"
        android:text="@string/input_age"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="254dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="410dp"
        android:fontFamily="arial"
        android:text="@string/header_main"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/testOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageRedCross"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageRedCross"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toStartOf="@+id/textHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/redcross_foreground" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="arial"
        android:text="@string/save"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAge" />

    <TextView
        android:id="@+id/testOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="arial"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHealth"
        app:layout_constraintEnd_toEndOf="@+id/buttonPressure"
        app:layout_constraintTop_toBottomOf="@+id/textHeader" />

    <Button
        android:id="@+id/buttonPressure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="134dp"
        android:fontFamily="arial"
        android:text="@string/pressure"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonHealth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <Button
        android:id="@+id/buttonHealth"
        android:layout_width="147dp"
        android:layout_height="56dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="132dp"
        android:fontFamily="arial"
        android:text="@string/health"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPressure"
        app:layout_constraintTop_toBottomOf="@+id/testOutput" />

</androidx.constraintlayout.widget.ConstraintLayout>