<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthActivity">

    <ImageView
        android:id="@+id/imageRedCross"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/textWeigh"
        app:layout_constraintEnd_toStartOf="@+id/textHeaderHealth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/redcross_foreground" />

    <TextView
        android:id="@+id/textHeaderHealth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="arial"
        android:text="@string/header_health"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textWeigh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageRedCross"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWeigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/weigh"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editWeigh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderHealth" />

    <EditText
        android:id="@+id/editWeigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textSteps"
        app:layout_constraintStart_toStartOf="@+id/textWeigh"
        app:layout_constraintTop_toBottomOf="@+id/textWeigh" />

    <TextView
        android:id="@+id/textSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="7dp"
        android:text="@string/steps"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editSteps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeigh" />

    <EditText
        android:id="@+id/editSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="335dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSteps" />

    <TextView
        android:id="@+id/testOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="arial"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="220dp"
        android:layout_height="47dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/testOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSteps" />
</androidx.constraintlayout.widget.ConstraintLayout>